QPID-1585 : WS-DM Method invocation feature.
git-svn-id: https://svn.eu.apache.org/repos/asf/qpid/trunk@736031 13f79535-47bb-0310-9956-ffa450edef68